maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:39: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurNord() && getIndication(x,y-1)<n){var dir=Direction.NORD
                ^ShortestPathMaze:41: error: not enough arguments for method aMurSud: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurSud() && getIndication(x,y+1)<n){var dir=Direction.SUD
               ^ShortestPathMaze:43: error: not enough arguments for method aMurOuest: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurOuest() && getIndication(x-1,y)<n){var dir=Direction.OUEST
                 ^ShortestPathMaze:45: error: not enough arguments for method aMurEst: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
    if(!aMurEst() && getIndication(x+1,y)<n){var dir=Direction.EST
               ^